# experiment--speech-to-text

./: .gitignore  Justfile  README.md  flake.nix  pyproject.toml
backends/diarizen/: pyproject.toml
backends/whisperx/: pyproject.toml
src/: main.py
src/diarizers/: __init__.py  base.py  diarizen_backend.py  nemo_backend.py  pyannote_backend.py  registry.py  speaker_matching.py  whisperx_backend.py
tests/: conftest.py  test_main.py
