[project]
name = "experiment-text-to-speech"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
  "transformers>=4.40",
  "torch>=2.10",
  "sounddevice>=0.4",
  "pyannote.audio>=4.0",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
nemo = ["nemo_toolkit[asr]", "soundfile"]
whisperx = ["whisperx>=3.8", "soundfile"]
all = ["nemo_toolkit[asr]", "soundfile", "whisperx>=3.8"]

[tool.uv]
# Exclude Windows: no cp313 wheels for several audio/ML dependencies
environments = ["sys_platform == 'linux'", "sys_platform == 'darwin'"]
# whisperx 3.8.x pins torch<2.9 in its own metadata, but works fine with 2.10+.
# Override so the resolver picks a single torch version for the whole project.
override-dependencies = ["torch>=2.10"]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov>=6",
]
