[project]
name = "experiment-text-to-speech"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
  "transformers>=4.40",
  "torch>=2.10",
  "sounddevice>=0.4",
  "pyannote.audio>=4.0",
  "python-dotenv>=1.0",
]


[tool.uv]
# Exclude Windows: no cp313 wheels for several audio/ML dependencies
environments = ["sys_platform == 'linux'", "sys_platform == 'darwin'"]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov>=6",
]
