[project]
name = "diarizen-backend"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
  "transformers>=4.40,<4.45",
  "torch>=2.1,<2.2",
  "torchaudio>=2.1,<2.2",
  "sounddevice>=0.4",
  "pyannote.audio",
  "python-dotenv>=1.0",
  "soundfile",
  "diarizen",
  "numpy<2.0",  # pyannote 3.x uses np.NaN removed in NumPy 2.0
  # diarizen runtime deps missing from its pyproject.toml
  "toml",
  "h5py",
  "librosa",
  "accelerate",
]

[tool.uv.sources]
diarizen = { git = "https://github.com/BUTSpeechFIT/DiariZen" }
# DiariZen bundles a patched pyannote-audio fork that adds `config` and
# `seg_duration` to SpeakerDiarization.__init__; the PyPI releases don't have this.
pyannote-audio = { git = "https://github.com/BUTSpeechFIT/DiariZen", subdirectory = "pyannote-audio" }
# PyPI only ships CPU-only torch wheels; CUDA-enabled wheels are on the PyTorch index.
torch = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv]
environments = ["sys_platform == 'linux'", "sys_platform == 'darwin'"]
