[project]
name = "whisperx-backend"
version = "0.1.0"
requires-python = ">=3.10,<3.14"
dependencies = [
  "transformers>=4.40",
  "torch~=2.8",
  "sounddevice>=0.4",
  "pyannote.audio>=4.0",
  "python-dotenv>=1.0",
  "whisperx>=3.8",
]

[tool.uv]
# torchcodec 0.7 matches torch~=2.8; 0.10 (pulled in transitively) requires torch>=2.10
override-dependencies = [
  "torchcodec==0.7.*",
]
